<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gpsdemo.MainActivity" >

    <Button
        android:id="@+id/my_boy"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/my_boy" />

    <Button
        android:id="@+id/restaurant"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/restaurant" />

    <Button
        android:id="@+id/end_user"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/end_user" />

</LinearLayout>